MA-6261-1 Create caam keyblob driver for general memory keyblob support
Support memory keyblob encryption and decryption.
Add caam_keyblob dts entry for sabresd 6dl/dq, which been used for
imx wfd hdcp stack.

Change-Id: I11ce4340c2ceb8071caa47d7d32dc643c4fa6dac
Signed-off-by: guoyin.chen <guoyin.chen@freescale.com>

--- a/arch/arm/boot/dts/imx6qdl-sabresd.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-sabresd.dtsi
@@ -305,6 +305,9 @@
 		bt-power-gpios = <&gpio1 2 0>;
 		status ="okay";
 	};
+	caam_keyblob {
+		compatible = "fsl,sec-v4.0-keyblob";
+	};
 };
 
 &audmux {
