--- a/arch/arm/boot/dts/imx6sx.dtsi
+++ b/arch/arm/boot/dts/imx6sx.dtsi
@@ -1528,6 +1528,11 @@
 			fsl,max-link-speed = <2>;
 			status = "disabled";
 		};
+
+		imx_ion {
+			compatible = "fsl,mxc-ion";
+			fsl,heap-id = <0>;
+		};
 	};
 
 	gpu-subsystem {
