MA-7250 Use build-in mode for bcmdhd
The BCMDHD and cfg80211 will be build-in
the kernel.

Signed-off-by: Haoran Wang <b50027@freescale.com>

Conflicts:
	drivers/net/wireless/bcmdhd/Makefile

Change-Id: I8b4b1dc8ee09aa241d3085dfa68de8df90fd6929

--- a/drivers/net/wireless/bcmdhd/Makefile
+++ b/drivers/net/wireless/bcmdhd/Makefile
@@ -96,7 +96,7 @@ DHDCFLAGS += -DWL_IFACE_COMB_NUM_CHANNELS
 # m: module type driver
 # y: built-in type driver
 ##########################
-#DRIVER_TYPE ?= y
+DRIVER_TYPE ?= y
 
 #########################
 # Chip dependent feature
