--- a/arch/arm/boot/dts/imx7d-sdb.dts
+++ b/arch/arm/boot/dts/imx7d-sdb.dts
@@ -208,6 +208,12 @@
 			spi-max-frequency = <100000>;
 		};
 	};
+
+	bt_rfkill {
+		compatible = "fsl,mxc_bt_rfkill";
+		bt-power-gpios = <&gpio4 23 0>;
+		status ="okay";
+	};
 };
 
 &adc1 {
