--- a/arch/arm/mach-imx/Kconfig
+++ b/arch/arm/mach-imx/Kconfig
@@ -656,6 +656,9 @@ choice
 
 endchoice
 
+config MXC_REBOOT_ANDROID_CMD
+	bool "Android reboot setting"
+
 endif
 
 config MACH_IMX_BLUETOOTH_RFKILL
