--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -584,8 +584,8 @@ CONFIG_USB_CONFIGFS_F_UAC1=y
 CONFIG_USB_CONFIGFS_F_UAC2=y
 CONFIG_USB_CONFIGFS_F_HID=y
 CONFIG_GADGET_UAC1=y
-CONFIG_USB_ETH=y
-CONFIG_USB_ETH_EEM=y
+# CONFIG_USB_ETH is not set
+# CONFIG_USB_ETH_EEM is not set
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_ARMMMCI=y
