MA-9801 Add ION configure to DTS for 8qm&8qxp platform.
Enable ION function on 8qm&8qxp platform.

Change-Id: Ib217b57e4d0706143db34626ddfd1002a25ff2e9
Signed-off-by: ivan.liu <xiaowen.liu@nxp.com>

--- a/arch/arm64/boot/dts/freescale/fsl-imx8qm.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qm.dtsi
@@ -2269,6 +2269,11 @@
 		cpu-base-addr = <0x40000000>;
 		status = "disabled";
 	};
+
+	imx_ion {
+		compatible = "fsl,mxc-ion";
+		fsl,heap-id = <0>;
+	};
 };
 
 &A53_0 {
