--- a/arch/arm64/boot/dts/freescale/fsl-imx8qxp.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qxp.dtsi
@@ -1579,6 +1579,11 @@
 		cpu-base-addr = <0x80000000>;
 		status = "disabled";
 	};
+
+	imx_ion {
+		compatible = "fsl,mxc-ion";
+		fsl,heap-id = <0>;
+	};
 };
 
 &A35_0 {
