--- a/drivers/watchdog/Kconfig
+++ b/drivers/watchdog/Kconfig
@@ -540,7 +540,7 @@ config MAX77620_WATCHDOG
 
 config IMX2_WDT
 	tristate "IMX2+ Watchdog"
-	depends on ARCH_MXC || ARCH_LAYERSCAPE
+	depends on ARCH_MXC || ARCH_LAYERSCAPE || ARCH_MXC_ARM64
 	select REGMAP_MMIO
 	select WATCHDOG_CORE
 	help
