--- a/drivers/video/fbdev/imx/Makefile
+++ b/drivers/video/fbdev/imx/Makefile
@@ -1,3 +1,4 @@
 obj-$(CONFIG_FB_LCDIF)			+= imx_lcdif.o
 obj-$(CONFIG_FB_IMX_DISPDRV_ENC)	+= imx_dispdrv.o
 obj-$(CONFIG_FB_IMX_NORTHWEST_DSI)	+= imx_northwest_dsi.o
+obj-$(CONFIG_FB_IMX_ADV7535)		+= adv7535.o
