--- a/arch/arm/configs/imx_v7_android_defconfig
+++ b/arch/arm/configs/imx_v7_android_defconfig
@@ -405,6 +405,7 @@ CONFIG_VIDEO_MXC_CAPTURE=y
 CONFIG_MXC_CAMERA_OV5640=y
 CONFIG_MXC_CAMERA_OV5642=y
 CONFIG_MXC_CAMERA_OV5640_MIPI=y
+CONFIG_MXC_CAMERA_OV5645_MIPI=y
 CONFIG_MXC_TVIN_ADV7180=y
 CONFIG_MXC_IPU_DEVICE_QUEUE_SDC=y
 CONFIG_VIDEO_MXC_IPU_OUTPUT=y
