--- a/arch/arm/configs/imx_v7_android_defconfig
+++ b/arch/arm/configs/imx_v7_android_defconfig
@@ -410,6 +410,7 @@ CONFIG_SND_SOC_IMX_SI476X=y
 CONFIG_SND_SOC_IMX_HDMI=y
 CONFIG_SND_SOC_IMX_TAS5760=y
 CONFIG_SND_SOC_IMX_XTOR=y
+CONFIG_SND_SOC_FSL_ASOC_CARD=y
 CONFIG_HIDRAW=y
 CONFIG_UHID=y
 CONFIG_HID_A4TECH=y
