--- a/drivers/soc/imx/Kconfig
+++ b/drivers/soc/imx/Kconfig
@@ -15,26 +15,26 @@ config ARCH_FSL_IMX8QM
 	bool "i.MX8QM"
 	select HAVE_IMX_MU
 	select HAVE_IMX_RPMSG
-	select HAVE_IMX_SOC
+	select HAVE_IMX8_SOC
 
 config ARCH_FSL_IMX8QXP
 	bool "i.MX8QXP"
 	select HAVE_IMX_MU
 	select HAVE_IMX_RPMSG
-	select HAVE_IMX_SOC
+	select HAVE_IMX8_SOC
 
 config ARCH_FSL_IMX8MQ
 	bool "i.MX8MQ"
 	select HAVE_IMX_MU
 	select HAVE_IMX_RPMSG
-	select HAVE_IMX_SOC
+	select HAVE_IMX8_SOC
 
 endif
 
 config HAVE_IMX_MU
 	bool
 
-config HAVE_IMX_SOC
+config HAVE_IMX8_SOC
 	bool
 
 config HAVE_IMX_RPMSG
