--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -425,9 +425,11 @@ CONFIG_SENSORS_ARM_SCPI=y
 CONFIG_SENSORS_LM90=y
 CONFIG_SENSORS_INA2XX=y
 # CONFIG_MXC_MMA8451 is not set
+CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
 CONFIG_CPU_THERMAL=y
 CONFIG_THERMAL_EMULATION=y
+CONFIG_IMX8M_THERMAL=y
 CONFIG_IMX_SC_THERMAL=y
 CONFIG_EXYNOS_THERMAL=y
 CONFIG_WATCHDOG=y
@@ -616,7 +618,9 @@ CONFIG_MXC_GPU_VIV=y
 CONFIG_GPU_LOW_MEMORY_KILLER=y
 CONFIG_MMC_SPI=y
 CONFIG_MMC_SDHI=y
+CONFIG_MXC_MLB150=y
 CONFIG_LEDS_GPIO=y
+CONFIG_LEDS_PWM=y
 CONFIG_LEDS_SYSCON=y
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
 CONFIG_LEDS_TRIGGER_CPU=y
@@ -670,6 +674,7 @@ CONFIG_ARCH_TEGRA_210_SOC=y
 CONFIG_IIO=y
 CONFIG_EXYNOS_ADC=y
 CONFIG_PWM=y
+CONFIG_PWM_IMX=y
 CONFIG_PWM_SAMSUNG=y
 CONFIG_PWM_TEGRA=y
 CONFIG_PHY_HI6220_USB=y
