--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -41,6 +41,7 @@ CONFIG_ARCH_FSL_IMX8QM=y
 CONFIG_ARCH_FSL_IMX8QXP=y
 CONFIG_ARCH_FSL_IMX8MQ=y
 CONFIG_PCI=y
+CONFIG_PCI_IMX6=y
 CONFIG_PCI_IOV=y
 CONFIG_PCI_HOST_GENERIC=y
 CONFIG_PCI_HISI=y
@@ -215,6 +216,10 @@ CONFIG_MAC80211_LEDS=y
 CONFIG_RFKILL=y
 CONFIG_RFKILL_INPUT=y
 CONFIG_RFKILL_GPIO=y
+CONFIG_BCMDHD_1363=y
+CONFIG_BCMDHD_PCIE=y
+CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/bcm/1CX_BCM4356/fw_bcmdhd.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/system/etc/firmware/bcm/1CX_BCM4356/bcmdhd.1CX.cal";
 CONFIG_MACH_IMX_BLUETOOTH_RFKILL=y
 CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
