--- a/drivers/bluetooth/Kconfig
+++ b/drivers/bluetooth/Kconfig
@@ -76,6 +76,12 @@ config BT_HCIUART
 	  Say Y here to compile support for Bluetooth UART devices into the
 	  kernel or say M to compile it as module (hci_uart).
 
+config MACH_IMX_BLUETOOTH_RFKILL
+        tristate "i.MX Bluetooth rfkill interface support"
+	depends on RFKILL
+	help
+          Say Y to get the standard rfkill interface of Bluetooth
+
 config BT_HCIUART_H4
 	bool "UART (H4) protocol support"
 	depends on BT_HCIUART
