MA-10035 [Android]kernel: align BSP configure
align BSP configure.

Signed-off-by: zhang sanshan <sanshan.zhang@nxp.com>

--- a/arch/arm64/configs/android_defconfig
+++ b/arch/arm64/configs/android_defconfig
@@ -395,6 +395,7 @@ CONFIG_CPU_THERMAL=y
 CONFIG_THERMAL_EMULATION=y
 CONFIG_IMX8M_THERMAL=y
 CONFIG_IMX_SC_THERMAL=y
+CONFIG_DEVICE_THERMAL=y
 CONFIG_EXYNOS_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_IMX2_WDT=y
@@ -425,7 +426,14 @@ CONFIG_DRM_IMX_TVE=y
 CONFIG_DRM_IMX_LDB=y
 CONFIG_DRM_IMX_HDMI=y
 CONFIG_DRM_HISI_KIRIN=y
+CONFIG_FB_IMX64=y
+CONFIG_FB_IMX64_DEBUG=y
 CONFIG_FB_ARMCLCD=y
+CONFIG_FB_MXS=y
+CONFIG_FB_MXC_MIPI_DSI_NORTHWEST=y
+CONFIG_FB_MXC_TRULY_WVGA_SYNC_PANEL=y
+CONFIG_FB_MX8_HDMI=y
+CONFIG_FB_MXC_ADV7535=y
 CONFIG_BACKLIGHT_LP855X=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
@@ -436,6 +444,7 @@ CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_FSL_ACM=y
 CONFIG_SND_SOC_FSL_HIFI4=y
+CONFIG_SND_SOC_IMX_CDNHDMI=y
 CONFIG_SND_IMX_SOC=y
 CONFIG_SND_SOC_IMX_WM8524=y
 CONFIG_SND_SOC_IMX_CS42888=y
@@ -592,6 +601,8 @@ CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ION=y
 CONFIG_ION_MXC=y
+CONFIG_TYPEC_TCPM=y
+CONFIG_TYPEC_TCPCI=y
 CONFIG_COMMON_CLK_SCPI=y
 CONFIG_COMMON_CLK_CS2000_CP=y
 CONFIG_COMMON_CLK_S2MPS11=y
