--- a/arch/arm64/boot/dts/freescale/fsl-imx8qm.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qm.dtsi
@@ -2128,6 +2128,7 @@
 		power-domains = <&pd_conn_sdch0>;
 		fsl,tuning-start-tap = <20>;
 		fsl,tuning-step= <2>;
+		iommus = <&smmu 0x11 0x7f80>;
 		status = "disabled";
 	};
 
@@ -2145,6 +2146,7 @@
 		power-domains = <&pd_conn_sdch1>;
 		fsl,tuning-start-tap = <20>;
 		fsl,tuning-step= <2>;
+		iommus = <&smmu 0x11 0x7f80>;
 		status = "disabled";
 	};
 
@@ -2160,6 +2162,7 @@
 		assigned-clocks = <&clk IMX8QM_SDHC2_DIV>;
 		assigned-clock-rates = <200000000>;
 		power-domains = <&pd_conn_sdch2>;
+		iommus = <&smmu 0x11 0x7f80>;
 		status = "disabled";
 	};
 
