--- a/arch/arm/boot/dts/imx6ul-14x14-evk.dts
+++ b/arch/arm/boot/dts/imx6ul-14x14-evk.dts
@@ -448,6 +448,34 @@
 			>;
 		};
 
+		pinctrl_spi1: spi1grp{
+			fsl,pins = <
+		                MX6UL_PAD_CSI_DATA00__ECSPI2_SCLK          0x000010B0
+		                MX6UL_PAD_CSI_DATA01__ECSPI2_SS0           0x000010B0
+		                MX6UL_PAD_CSI_DATA02__ECSPI2_MOSI          0x000010B0
+               			MX6UL_PAD_CSI_DATA03__ECSPI2_MISO          0x000010B0
+			>;
+		};
+
+		
+		pinctrl_spi2: spi2grp{
+			fsl,pins = <
+		                MX6UL_PAD_CSI_DATA04__ECSPI1_SCLK          0x000010B0
+		                MX6UL_PAD_CSI_DATA05__ECSPI1_SS0           0x000010B0
+		                MX6UL_PAD_CSI_DATA06__ECSPI1_MOSI          0x000010B0
+		                MX6UL_PAD_CSI_DATA07__ECSPI1_MISO          0x000010B0
+			>;
+		};
+
+		pinctrl_spi3: spi3grp{
+			fsl,pins = <
+		                MX6UL_PAD_NAND_CE0_B__ECSPI3_SCLK          0x000010B0
+		                MX6UL_PAD_NAND_CE1_B__ECSPI3_MOSI          0x000010B0
+		                MX6UL_PAD_NAND_CLE__ECSPI3_MISO            0x000010B0
+		                MX6UL_PAD_NAND_READY_B__ECSPI3_SS0         0x000010B0
+			>;
+		};
+
 		pinctrl_spi4: spi4grp {
 			fsl,pins = <
 				MX6UL_PAD_BOOT_MODE0__GPIO5_IO10	0x70a1
