--- a/arch/arm/configs/imx_v7_defconfig
+++ b/arch/arm/configs/imx_v7_defconfig
@@ -61,25 +61,25 @@ CONFIG_IP_PNP_DHCP=y
 # CONFIG_INET_XFRM_MODE_TUNNEL is not set
 # CONFIG_INET_XFRM_MODE_BEET is not set
 # CONFIG_INET_LRO is not set
-CONFIG_IPV6=y
-CONFIG_VLAN_8021Q=y
+# CONFIG_IPV6=y
+# CONFIG_VLAN_8021Q=y
 CONFIG_LLC2=y
-CONFIG_CAN=y
-CONFIG_CAN_FLEXCAN=y
-CONFIG_CAN_M_CAN=y
-CONFIG_BT=y
-CONFIG_BT_RFCOMM=y
-CONFIG_BT_RFCOMM_TTY=y
-CONFIG_BT_BNEP=y
-CONFIG_BT_BNEP_MC_FILTER=y
-CONFIG_BT_BNEP_PROTO_FILTER=y
-CONFIG_BT_HIDP=y
-CONFIG_BT_HCIBTUSB=y
-CONFIG_BT_HCIUART=y
-CONFIG_BT_HCIUART_BCSP=y
-CONFIG_BT_HCIUART_ATH3K=y
-CONFIG_BT_HCIBCM203X=y
-CONFIG_BT_ATH3K=y
+# CONFIG_CAN=y
+# CONFIG_CAN_FLEXCAN=y
+# CONFIG_CAN_M_CAN=y
+# CONFIG_BT=y
+# CONFIG_BT_RFCOMM=y
+# CONFIG_BT_RFCOMM_TTY=y
+# CONFIG_BT_BNEP=y
+# CONFIG_BT_BNEP_MC_FILTER=y
+# CONFIG_BT_BNEP_PROTO_FILTER=y
+# CONFIG_BT_HIDP=y
+# CONFIG_BT_HCIBTUSB=y
+# CONFIG_BT_HCIUART=y
+# CONFIG_BT_HCIUART_BCSP=y
+# CONFIG_BT_HCIUART_ATH3K=y
+# CONFIG_BT_HCIBCM203X=y
+# CONFIG_BT_ATH3K=y
 CONFIG_CFG80211=y
 CONFIG_MAC80211=y
 CONFIG_DEVTMPFS=y
@@ -145,10 +145,10 @@ CONFIG_USB_RTL8150=m
 CONFIG_USB_RTL8152=m
 CONFIG_USB_USBNET=y
 CONFIG_USB_NET_CDC_EEM=m
-CONFIG_BCMDHD=y
-CONFIG_BCMDHD_SDIO=y
-CONFIG_BCMDHD_FW_PATH="/lib/firmware/bcm/ZP_BCM4339/fw_bcmdhd.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/lib/firmware/bcm/ZP_BCM4339/bcmdhd.ZP.OOB.cal"
+# CONFIG_BCMDHD=y
+# CONFIG_BCMDHD_SDIO=y
+# CONFIG_BCMDHD_FW_PATH="/lib/firmware/bcm/ZP_BCM4339/fw_bcmdhd.bin"
+# CONFIG_BCMDHD_NVRAM_PATH="/lib/firmware/bcm/ZP_BCM4339/bcmdhd.ZP.OOB.cal"
 # CONFIG_RTL_CARDS is not set
 # CONFIG_INPUT_MOUSEDEV_PSAUX is not set
 CONFIG_INPUT_EVDEV=y
@@ -187,12 +187,14 @@ CONFIG_I2C_ALGOPCF=m
 CONFIG_I2C_ALGOPCA=m
 CONFIG_I2C_IMX=y
 CONFIG_SPI=y
+CONFIG_SPI_MASTER=y
+CONFIG_SPI_SPIDEV=y
 CONFIG_SPI_GPIO=y
 CONFIG_SPI_IMX=y
 CONFIG_GPIO_SYSFS=y
-CONFIG_GPIO_MAX732X=y
-CONFIG_GPIO_PCA953X=y
-CONFIG_GPIO_74X164=y
+# CONFIG_GPIO_MAX732X=y
+# CONFIG_GPIO_PCA953X=y
+# CONFIG_GPIO_74X164=y
 CONFIG_POWER_SUPPLY=y
 CONFIG_SABRESD_MAX8903=y
 CONFIG_POWER_RESET=y
@@ -225,70 +227,70 @@ CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_RADIO_SUPPORT=y
 CONFIG_MEDIA_RC_SUPPORT=y
 CONFIG_RC_DEVICES=y
-CONFIG_IR_GPIO_CIR=y
+# CONFIG_IR_GPIO_CIR=y
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=m
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_VIDEO_MXC_OUTPUT=y
 CONFIG_VIDEO_MXC_CAPTURE=m
-CONFIG_MXC_CAMERA_OV5640=m
-CONFIG_MXC_CAMERA_OV5642=m
-CONFIG_MXC_CAMERA_OV5640_MIPI=m
+# CONFIG_MXC_CAMERA_OV5640=m
+# CONFIG_MXC_CAMERA_OV5642=m
+# CONFIG_MXC_CAMERA_OV5640_MIPI=m
 CONFIG_MXC_TVIN_ADV7180=m
 CONFIG_MXC_IPU_DEVICE_QUEUE_SDC=m
 CONFIG_VIDEO_MXC_IPU_OUTPUT=y
 CONFIG_VIDEO_MXC_PXP_V4L2=y
-CONFIG_VIDEO_MXC_CSI_CAMERA=m
+# CONFIG_VIDEO_MXC_CSI_CAMERA=m
 CONFIG_MXC_VADC=m
-CONFIG_MXC_MIPI_CSI=m
-CONFIG_MXC_CAMERA_OV5647_MIPI=m
+# CONFIG_MXC_MIPI_CSI=m
+# CONFIG_MXC_CAMERA_OV5647_MIPI=m
 CONFIG_SOC_CAMERA=y
 CONFIG_VIDEO_MX3=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_CODA=y
 CONFIG_RADIO_SI476X=y
-CONFIG_SOC_CAMERA_OV2640=y
+# CONFIG_SOC_CAMERA_OV2640=y
 CONFIG_DRM=y
 CONFIG_DRM_VIVANTE=y
 CONFIG_FB=y
-CONFIG_FB_MXS=y
-CONFIG_FB_MXC_SYNC_PANEL=y
-CONFIG_FB_MXC_MIPI_DSI=y
-CONFIG_FB_MXC_MIPI_DSI_SAMSUNG=y
-CONFIG_FB_MXC_TRULY_WVGA_SYNC_PANEL=y
-CONFIG_FB_MXC_TRULY_PANEL_TFT3P5079E=y
-CONFIG_FB_MXC_TRULY_PANEL_TFT3P5581E=y
-CONFIG_FB_MXC_LDB=y
-CONFIG_FB_MXC_HDMI=y
-CONFIG_FB_MXS_SII902X=y
-CONFIG_FB_MXC_DCIC=m
+# CONFIG_FB_MXS=y
+# CONFIG_FB_MXC_SYNC_PANEL=y
+# CONFIG_FB_MXC_MIPI_DSI=y
+# CONFIG_FB_MXC_MIPI_DSI_SAMSUNG=y
+# CONFIG_FB_MXC_TRULY_WVGA_SYNC_PANEL=y
+# CONFIG_FB_MXC_TRULY_PANEL_TFT3P5079E=y
+# CONFIG_FB_MXC_TRULY_PANEL_TFT3P5581E=y
+# CONFIG_FB_MXC_LDB=y
+# CONFIG_FB_MXC_HDMI=y
+# CONFIG_FB_MXS_SII902X=y
+# CONFIG_FB_MXC_DCIC=m
 CONFIG_HANNSTAR_CABC=y
-CONFIG_FB_MXC_EINK_PANEL=y
-CONFIG_FB_MXC_EINK_V2_PANEL=y
-CONFIG_LCD_CLASS_DEVICE=y
-CONFIG_LCD_L4F00242T03=y
+# CONFIG_FB_MXC_EINK_PANEL=y
+# CONFIG_FB_MXC_EINK_V2_PANEL=y
+# CONFIG_LCD_CLASS_DEVICE=y
+# CONFIG_LCD_L4F00242T03=y
 CONFIG_LCD_PLATFORM=y
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 CONFIG_LOGO=y
-CONFIG_SOUND=y
-CONFIG_SND=y
-CONFIG_SND_USB_AUDIO=m
-CONFIG_SND_SOC=y
-CONFIG_SND_IMX_SOC=y
-CONFIG_SND_SOC_EUKREA_TLV320=y
-CONFIG_SND_SOC_IMX_WM8960=y
-CONFIG_SND_SOC_IMX_SII902X=y
-CONFIG_SND_SOC_IMX_WM8958=y
-CONFIG_SND_SOC_IMX_CS42888=y
-CONFIG_SND_SOC_IMX_WM8962=y
-CONFIG_SND_SOC_IMX_SGTL5000=y
-CONFIG_SND_SOC_IMX_MQS=y
-CONFIG_SND_SOC_IMX_SPDIF=y
-CONFIG_SND_SOC_IMX_MC13783=y
-CONFIG_SND_SOC_IMX_SI476X=y
-CONFIG_SND_SOC_IMX_HDMI=y
+# CONFIG_SOUND=y
+# CONFIG_SND=y
+# CONFIG_SND_USB_AUDIO=m
+# CONFIG_SND_SOC=y
+# CONFIG_SND_IMX_SOC=y
+# CONFIG_SND_SOC_EUKREA_TLV320=y
+# CONFIG_SND_SOC_IMX_WM8960=y
+# CONFIG_SND_SOC_IMX_SII902X=y
+# CONFIG_SND_SOC_IMX_WM8958=y
+# CONFIG_SND_SOC_IMX_CS42888=y
+# CONFIG_SND_SOC_IMX_WM8962=y
+# CONFIG_SND_SOC_IMX_SGTL5000=y
+# CONFIG_SND_SOC_IMX_MQS=y
+# CONFIG_SND_SOC_IMX_SPDIF=y
+# CONFIG_SND_SOC_IMX_MC13783=y
+# CONFIG_SND_SOC_IMX_SI476X=y
+# CONFIG_SND_SOC_IMX_HDMI=y
 CONFIG_USB=y
 CONFIG_USB_OTG_WHITELIST=y
 CONFIG_USB_OTG_FSM=y
@@ -334,25 +336,25 @@ CONFIG_MXC_IPU=y
 CONFIG_MXC_IPU_V3_PRE=y
 CONFIG_MXC_GPU_VIV=y
 CONFIG_MXC_SIM=y
-CONFIG_MXC_MIPI_CSI2=y
-CONFIG_MXC_HDMI_CEC=y
-CONFIG_NEW_LEDS=y
-CONFIG_LEDS_CLASS=y
-CONFIG_LEDS_GPIO=y
-CONFIG_LEDS_TRIGGERS=y
-CONFIG_LEDS_TRIGGER_TIMER=y
-CONFIG_LEDS_TRIGGER_ONESHOT=y
-CONFIG_LEDS_TRIGGER_HEARTBEAT=y
-CONFIG_LEDS_TRIGGER_BACKLIGHT=y
-CONFIG_LEDS_TRIGGER_GPIO=y
+# CONFIG_MXC_MIPI_CSI2=y
+# CONFIG_MXC_HDMI_CEC=y
+# CONFIG_NEW_LEDS=y
+# CONFIG_LEDS_CLASS=y
+# CONFIG_LEDS_GPIO=y
+# CONFIG_LEDS_TRIGGERS=y
+# CONFIG_LEDS_TRIGGER_TIMER=y
+# CONFIG_LEDS_TRIGGER_ONESHOT=y
+# CONFIG_LEDS_TRIGGER_HEARTBEAT=y
+# CONFIG_LEDS_TRIGGER_BACKLIGHT=y
+# CONFIG_LEDS_TRIGGER_GPIO=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_INTF_DEV_UIE_EMUL=y
 CONFIG_RTC_DRV_MC13XXX=y
 CONFIG_RTC_DRV_MXC=y
 CONFIG_RTC_DRV_SNVS=y
 CONFIG_DMADEVICES=y
-CONFIG_MXC_PXP_V2=y
-CONFIG_MXC_PXP_V3=y
+# CONFIG_MXC_PXP_V2=y
+# CONFIG_MXC_PXP_V3=y
 CONFIG_IMX_SDMA=y
 CONFIG_MXS_DMA=y
 CONFIG_DMATEST=m
@@ -424,11 +426,11 @@ CONFIG_CRYPTO_CAMELLIA=y
 CONFIG_CRYPTO_DES=y
 CONFIG_CRYPTO_TWOFISH=y
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
-CONFIG_CRYPTO_DEV_FSL_CAAM=y
-CONFIG_CRYPTO_DEV_FSL_CAAM_SM=y
-CONFIG_CRYPTO_DEV_FSL_CAAM_SM_TEST=y
-CONFIG_CRYPTO_DEV_FSL_CAAM_SECVIO=y
-CONFIG_CRYPTO_DEV_MXS_DCP=y
+# CONFIG_CRYPTO_DEV_FSL_CAAM=y
+# CONFIG_CRYPTO_DEV_FSL_CAAM_SM=y
+# CONFIG_CRYPTO_DEV_FSL_CAAM_SM_TEST=y
+# CONFIG_CRYPTO_DEV_FSL_CAAM_SECVIO=y
+# CONFIG_CRYPTO_DEV_MXS_DCP=y
 CONFIG_CRC_CCITT=m
 CONFIG_CRC_T10DIF=y
 CONFIG_CRC7=m
