add pause parameter to etheneret, enable tx/rx flow control

--- a/arch/arm/boot/dts/imx6ul-k6206.dts
+++ b/arch/arm/boot/dts/imx6ul-k6206.dts
@@ -22,6 +22,8 @@
 	fixed-link {
 		speed = <100>;
 		full-duplex;
+		pause;
+		asym-pause;
 	};
 };
 
@@ -34,6 +36,8 @@
 	fixed-link {
 		speed = <100>;
 		full-duplex;
+		pause;
+		asym-pause;
 	};
 };
 
