Add imx6 mpu8080 interface support, add ili9225g lcd driver.

--- a/arch/arm/configs/imx_v7_defconfig
+++ b/arch/arm/configs/imx_v7_defconfig
@@ -255,8 +255,8 @@ CONFIG_RADIO_SI476X=y
 CONFIG_DRM=y
 CONFIG_DRM_VIVANTE=y
 CONFIG_FB=y
-# CONFIG_FB_MXS=y
-# CONFIG_FB_MXC_SYNC_PANEL=y
+CONFIG_FB_MXS=y
+CONFIG_FB_MXC_SYNC_PANEL=y
 # CONFIG_FB_MXC_MIPI_DSI=y
 # CONFIG_FB_MXC_MIPI_DSI_SAMSUNG=y
 # CONFIG_FB_MXC_TRULY_WVGA_SYNC_PANEL=y
@@ -265,6 +265,7 @@ CONFIG_FB=y
 # CONFIG_FB_MXC_LDB=y
 # CONFIG_FB_MXC_HDMI=y
 # CONFIG_FB_MXS_SII902X=y
+CONFIG_FB_MXS_ILI9225G_QCIF=y
 # CONFIG_FB_MXC_DCIC=m
 CONFIG_HANNSTAR_CABC=y
 # CONFIG_FB_MXC_EINK_PANEL=y
@@ -292,6 +293,7 @@ CONFIG_LOGO=y
 # CONFIG_SND_SOC_IMX_SPDIF=y
 # CONFIG_SND_SOC_IMX_MC13783=y
 # CONFIG_SND_SOC_IMX_SI476X=y
+CONFIG_VIDEOMODE_HELPERS=y
 # CONFIG_SND_SOC_IMX_HDMI=y
 CONFIG_USB=y
 CONFIG_USB_OTG_WHITELIST=y
