Add rtc-rx8010 driver support.

--- a/arch/arm/boot/dts/imx6ul-14x14-evk.dts
+++ b/arch/arm/boot/dts/imx6ul-14x14-evk.dts
@@ -242,6 +242,12 @@
 	pinctrl-0 = <&pinctrl_i2c1>;
 	status = "okay";
 
+	rx8010: rx8010@32 {
+		compatible = "epson,rx8010";
+		reg = <0x32>;
+		status = "okay";
+	};
+
 	mag3110@0e {
 		compatible = "fsl,mag3110";
 		reg = <0x0e>;
