--- a/arch/arm/configs/imx_v7_defconfig
+++ b/arch/arm/configs/imx_v7_defconfig
@@ -361,6 +361,7 @@ CONFIG_RTC_DRV_MC13XXX=y
 CONFIG_RTC_DRV_MXC=y
 CONFIG_RTC_DRV_SNVS=y
 CONFIG_DMADEVICES=y
+CONFIG_RTC_DRV_RX8010=y
 # CONFIG_MXC_PXP_V2=y
 # CONFIG_MXC_PXP_V3=y
 CONFIG_IMX_SDMA=y
