--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -551,6 +551,15 @@ config RTC_DRV_FM3130
 	  This driver can also be built as a module. If so the module
 	  will be called rtc-fm3130.
 
+config RTC_DRV_RX8010
+	tristate "Epson RX-8010"
+	depends on I2C
+	help
+	If you say yes here you will get support for the Epson RX-8010.
+
+	This driver can also be built as a module. If so the module
+	will be called rtc-rx8010.
+
 config RTC_DRV_RX8581
 	tristate "Epson RX-8581"
 	help
