--- a/arch/arm/configs/imx_v7_defconfig
+++ b/arch/arm/configs/imx_v7_defconfig
@@ -175,7 +175,7 @@ CONFIG_INPUT_MMA8450=y
 CONFIG_INPUT_ADXL34X=y
 CONFIG_INPUT_ADXL34X_I2C=y
 CONFIG_INPUT_MPL3115=y
-CONFIG_SENSOR_FXLS8471=y
+#CONFIG_SENSOR_FXLS8471 is not set
 CONFIG_INPUT_ISL29023=y
 CONFIG_SERIO_SERPORT=m
 # CONFIG_LEGACY_PTYS is not set
